website is ready

--- a/src/pages/Catalog.module.css
+++ b/src/pages/Catalog.module.css
@@ -46,6 +46,10 @@
     white-space: pre-wrap;
 }
 
+.book {
+    text-decoration: none;
+}
+
 .book:hover {
     box-shadow: 0 0 5px 0 white;
 }
@@ -60,10 +64,13 @@
     display: flex;
     flex-direction: column;
 
+    text-decoration: none;
+
     margin: 0.5em;
 }
 
 .book .title {
+    font-family: "Montserrat";
     color: rgb(208, 208, 208);
 }
 
